objects/EUR_ISP_UserAccount__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>UserAccounts (EU)</relationshipLabel>
        <relationshipName>UserAccounts_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Cust_Ext_ID_Account_User_Usernam__c</fullName>
        <inlineHelpText>You are not allowed to create an UserAccount record with the same Account SF ID + External ID and User Username  as already exist.</inlineHelpText>
        <label>Account SF ID &amp; User Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_ISP_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserAccounts_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserAccount (EU)</label>
    <nameField>
        <displayFormat>UA-{00000000}</displayFormat>
        <label>UserAccount ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserAccounts (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>